# QtQuick_Project_Template

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
Client_Code/Bico_QUIThread_Sample/: Bico_QUIThread_Sample.cpp  Bico_QUIThread_Sample.h
Client_Code/Bico_QUIThread_Sample/Data_Object/: Bico_QUIThread_Sample_Data.cpp
Client_Code/Task_1/: Task_1.h
Client_Code/Task_1/Data_Object/: Task_1_Data.cpp  Task_1_Data.h
Template_Material/: bico_quithread.h
Template_Material/Common/: bico_qmessdata.cpp  bico_qmessdata.h  bico_qmutexqueue.h  bico_qthread.cpp  bico_qthread.h
src/: .qmlls.ini  CMakeLists.txt  main.cpp
src/Client_Code/Bico_QUIThread_Sample/: Bico_QUIThread_Sample.cpp  Bico_QUIThread_Sample.h
src/Client_Code/Bico_QUIThread_Sample/Data_Object/: Bico_QUIThread_Sample_Data.h
src/Client_Code/Task1/: Task1.cpp  Task1.h  Task1_Paths.cmake
src/Client_Code/Task1/Data_Object/: Task1_Data.cpp  Task1_Data.h
src/Client_Code/Task1/UI/: Task1.qmlproject  Task1.qmlproject.qtds  Task1.qrc  qtquickcontrols2.conf
src/Client_Code/Task1/UI/Task1/Constants/: Constants.qml
src/Client_Code/Task1/UI/Task1Content/: App.qml  Screen01.qml
src/Client_Code/Task_1/: .qmlls.ini  CMakeLists.txt  Task_1.cpp  Task_1.h  Task_1.qml  Task_1_Path.cmake
src/Client_Code/Task_1/UI/: Task_1.qmlproject  Task_1.qmlproject.qtds  qtquickcontrols2.conf
src/Client_Code/Task_1/UI/Task_1/: Constants.qml  SimpleModernButton.qml  qmldir
src/Client_Code/Task_1/UI/Task_1/Components/ModernButton/: ModernButton.qml  WrapperModernButton.qml  qmldir
src/Client_Code/Task_1/UI/Task_1/MyComponents/ModernButton/: ModernButton.qml  qmldir
src/Client_Code/Task_1/UI/Task_1/OtherComponents/ModernButton/: ModernButton.qml
src/Client_Code/Task_1/UI/Task_1Content/: App.qml
src/lib/: bico_quithread.cpp  bico_quithread.h
